--- a/static/tvshows.html
+++ b/static/tvshows.html
@@ -1,16 +1,91 @@
+<head>
+<style>
+* {
+    box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
+
+/* Style the header */
+.header {
+    background-color: #ffe5e5;
+    padding: 25px;
+    text-align: center;
+}
+
+/* Style the top navigation bar */
+.topnav {
+    overflow: hidden;
+    background-color: #ff9999;
+}
+
+/* Style the topnav links */
+.topnav a {
+    float: left;
+    display: block;
+    color: #ff9999;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change color on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: white;
+}
+h1 {
+    font-size: 20px;
+}
+
+ol {
+    background: #ff9999;
+    padding: 20px;
+}
+
+ol li {
+    background: #ffe5e5;
+    padding: 5px;
+    margin-left: 35px;
+}
+a:link, a:visited {
+    background-color: #f44336;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+
+a:hover, a:active {
+    background-color: red;
+}
+</style>
+</head>
 <body>
-TV Shows :<br>
-ID :<input type="text" id="id"><br>
+<div class="header">
+  <h1>WELCOME TO OUR PAGE</h1>
+</div>
+
+<div class="topnav">
+  <a href="http://localhost:8000/static/idols.html">Idols</a>
+  <a href="http://localhost:8000/static/tvshows.html">TV Shows</a>
+<ol><br>
+<h1>TV SHOWS :<br></h1>
+ID :<input type="text" id="id"><br><br>
 Name:<input type="text" id="name"><br>
 <br>
 <button onClick="post_tvshow()">Add group</button>
 
-<br>Delete TV Shows Info :<br>
+<br><h1>MODIFY TV SHOWS INFO :</h1><br>
 <select id="sel"></select>
 <button onclick="delete_tvshow()">DELETE</button>
-
-<br>Edit TV Shows Info :<br>
-<input type="text" id="newname"><button onClick="put_tvshow()">EDIT</button>
+<button onClick="put_tvshow()">EDIT</button>
+<input type="text" id="newname">
+</ol>
 </body>
 
 <script>
